--- a/style.css
+++ b/style.css
@@ -56,6 +56,37 @@ input, button{
 #new-task-submit::hover{
     opacity: 0.8;
 }
-#new-task-submit::active{
-    opacity: 0.6;
+#new-task-submit:active{
+    color: rgb(192, 180, 46);
+}
+main{
+    flex: 1 1 0%;
+    padding: 2rem 1rem;
+}
+.task-list{
+    padding: 1rem;
+}
+
+h2{
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    margin-bottom: 10px;
+    color: white;
+}
+.task{
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.text{
+    color: white;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-style: normal;
 }
