--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ input, button{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     font-style: normal;
+    text-transform: uppercase;
     /* background-image: linear-gradient(to right, var(--greenyellow), var(--yellow));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; */
@@ -89,4 +90,20 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     font-style: normal;
+}
+.text:not(:read-only){
+    color: green;
+}
+.actions{
+    display: flex;
+    margin: 0 0.5rem-;
+}
+button{
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s;
 }
